# personal_style_postedit

./: .gitignore  AGENTS.md  FINAL_ASSESSMENT.md  MIMIC_EXPERIMENT.md  MIMIC_RESULTS_GPT_5_5.md  MIMIC_RESULTS_OPUS_4_7.md  Makefile  README.md  REPRODUCTION_PLAN.md  REPRODUCTION_REPORT.md  pyproject.toml  requirements.txt
logs/: 03acc614-1708-42a6-b142-9ef7a0f0ce4e.json  06285a67-fbc5-4673-9f1b-3e20aff3562f.json  0a303467-79b1-4641-9591-8c3a36f50413.json  0c529ac4-63ef-47e4-a8be-91a12f63242d.json  0d91417f-a097-424f-bf12-77b98654c26c.json  0e4ed97b-533a-4c35-9268-2610361186c3.json  1460c925-65dc-4f85-9bee-a3029020dd78.json  16e11b3b-7143-40ed-ba2c-c94e96d5be86.json  1a25aba9-d542-49a4-94df-900c081551b6.json  1a6bc3bd-868e-47cf-970d-67cf7d516465.json  1b97dea3-013d-476c-96a6-49d2960c7c99.json  1f506d3f-b34d-4657-9820-ef232904554d.json  21d20b0e-b89e-42a8-b0bb-cb8b2d2e35df.json  28bc03dc-f524-4a10-b9aa-4368bd13df42.json  2af273f2-bea4-4638-9cd7-4a8d3a0b8f26.json  32a9cad7-5b1c-480f-832c-1cedb782d226.json  354ff2f3-d1e5-40ee-9b32-f1c81c5d4df5.json  357b9f78-df87-4775-a67e-9a41bebbc02f.json  36f7c04d-9eb6-41fa-ae60-a6ad6fa1c429.json  379876ef-ea66-4914-90c7-052d13ad9036.json  417a64ff-e3b5-45c1-a926-83e8b3897840.json  47936247-3b3b-4aec-a540-0199ded5b35f.json  4cc3c761-a0ef-4a7d-b572-f933d9f34d7e.json  4d13e808-d845-407b-8891-abc4bbd755a3.json  54b36269-e8c7-475b-8d5c-8d028a523f32.json  572392a4-224e-4261-ad20-1c06fabc9220.json  57f6eb08-1334-4d1d-b32e-7ead2fae69b5.json  58a194df-223f-48a6-b63e-6dd56c0f2b57.json  5ebe55d9-ec28-4e1f-bba3-3e309275a847.json  (+52 more)
paper/: .gitignore  (+9 more)
(+61 files in other folders)
