[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "personal_style_postedit"
version = "0.1.0"
description = "Reproduction of Baumler et al. (ACL 26): Post-Editing LLM-Generated Text for Personal Style"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
dependencies = [
    "numpy>=2.0",
    "pandas>=2.2",
    "pyarrow>=15",
    "scipy>=1.13",
    "statsmodels>=0.14",
    "pingouin>=0.5,<0.7",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "torch>=2.4",
    "transformers>=4.45,<5",
    "huggingface_hub>=0.24",
    "accelerate>=0.34",
    "tqdm>=4.66",
    "requests>=2.32",
    "einops>=0.7",
    "openai>=1.50",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
